Extending basic screen events to send attribute map also with events. Adding initial controls tab

--- a/resources/gnos.properties
+++ b/resources/gnos.properties
@@ -1,6 +1,6 @@
 db.host=localhost
 db.port=3306
-db.schema=gnos
-db.user=arpan
-db.password=arpan
+db.schema=world
+db.user=rohghosh
+db.password=happy25th
 
