Added connection pool skeleton

--- a/resources/gnos.properties
+++ b/resources/gnos.properties
@@ -1,6 +1,6 @@
 db.host=localhost
 db.port=3306
-db.schema=world
-db.user=rohghosh
-db.password=happy25th
+db.schema=gnos
+db.user=arpan
+db.password=arpan
 
