--- a/.classpath
+++ b/.classpath
@@ -9,6 +9,6 @@
 	<classpathentry kind="lib" path="lib/org.eclipse.osgi_3.9.1.v20130814-1242.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.ui.workbench_3.105.1.v20130821-1411.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.37-bin.jar"/>
-	<classpathentry kind="lib" path="swing2swt.jar"/>
+	<classpathentry kind="lib" path="lib/swing2swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
