--- a/resources/gnos.properties
+++ b/resources/gnos.properties
@@ -1,11 +1,11 @@
 db.host=localhost
 db.port=3306
 db.schema=gnos
-db.user=arpan
-db.password=arpan
+db.user=rohghosh
+db.password=happy25th
 
 db.pool.min=1
-db.pool.max=1
+db.pool.max=3
 
 fields.required=block#bin#mining_area#pit_name#bench_rl#tonnes_wt
 
