--- a/resources/gnos.properties
+++ b/resources/gnos.properties
@@ -1,8 +1,8 @@
 db.host=localhost
 db.port=3306
 db.schema=gnos
-db.user=rohghosh
-db.password=happy25th
+db.user=arpan
+db.password=arpan
 
 db.pool.min=1
 db.pool.max=3
