--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,9 @@
 	<classpathentry kind="lib" path="lib/org.eclipse.ui.workbench_3.105.1.v20130821-1411.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.37-bin.jar"/>
 	<classpathentry kind="lib" path="lib/swing2swt.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.draw2d_3.10.100.201603210204.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.gef_3.11.0.201603210204.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.zest.core_1.5.300.201603210204.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.zest.layouts_1.1.300.201603210204.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
