1. Introduced scenario concept. 2. Needed to make several changes in DAOs and ScenarioConfiguration. 3. Stopped equation generation on shell close. 4. Saving and loading scenario data through scenarioconfiguration and scenarioDAO 5. Needed to increase max number of connections to connection pool. 6. Changed username password of db connection to standard gnos/gnos

--- a/resources/gnos.properties
+++ b/resources/gnos.properties
@@ -1,11 +1,11 @@
 db.host=localhost
 db.port=3306
 db.schema=gnos
-db.user=arpan
-db.password=arpan
+db.user=gnos
+db.password=gnos
 
 db.pool.min=1
-db.pool.max=3
+db.pool.max=10
 
 fields.required=block#bin#mining_area#pit_name#bench_rl#tonnes_wt
 
