--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,10 @@
 	<classpathentry kind="lib" path="lib/org.eclipse.zest.core_1.5.300.201603210204.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.zest.layouts_1.1.300.201603210204.jar"/>
 	<classpathentry kind="lib" path="lib/cplex.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-all-9.3.6.v20151106-uber.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.17.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-jdk14-1.7.17.jar"/>
+	<classpathentry kind="lib" path="lib/spark-core-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
