Removed unused table definitions

--- a/resources/gnos.properties
+++ b/resources/gnos.properties
@@ -2,7 +2,7 @@ db.host=localhost
 db.port=3306
 db.schema=gnos
 db.user=gnos
-db.password=gnos
+db.password=abcd1234!@#$
 
 db.pool.min=1
 db.pool.max=10
