Updated to create scheduler log

--- a/resources/gnos.properties
+++ b/resources/gnos.properties
@@ -10,3 +10,6 @@ db.pool.max=10
 fields.required=block#bin#mining_area#pit_name#bench_rl#tonnes_wt
 
 format.dp=9
+
+scheduler.log=C:/scheduler.log
+application.log=C:/gnos.log
